// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Create Test: after list get 1`] = `
ListStore {
  "currentPage": Object {},
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {},
  "lists": Object {
    "formModel": Object {
      "data": Array [
        Object {
          "guestName": "0num",
          "id": 0,
          "myVal": 0,
        },
        Object {
          "guestName": "1num",
          "id": 1,
          "myVal": 420,
        },
        Object {
          "guestName": "2num",
          "id": 2,
          "myVal": 840,
        },
        Object {
          "guestName": "3num",
          "id": 3,
          "myVal": 1260,
        },
        Object {
          "guestName": "4num",
          "id": 4,
          "myVal": 1680,
        },
        Object {
          "guestName": "5num",
          "id": 5,
          "myVal": 2100,
        },
        Object {
          "guestName": "6num",
          "id": 6,
          "myVal": 2520,
        },
        Object {
          "guestName": "7num",
          "id": 7,
          "myVal": 2940,
        },
        Object {
          "guestName": "8num",
          "id": 8,
          "myVal": 3360,
        },
        Object {
          "guestName": "9num",
          "id": 9,
          "myVal": 3780,
        },
      ],
      "limit": 10,
      "skip": 0,
      "total": 99,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 10,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
    },
  },
}
`;

exports[`DbStore Create Test: after login 1`] = `
<div>
  {
  "list": {
    "total": 0,
    "limit": 10,
    "skip": 0,
    "data": []
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 1,
  "showNextPage": false,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: after second page get 1`] = `
ListStore {
  "currentPage": Object {
    "formModel": 1,
  },
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {},
  "lists": Object {
    "formModel": Object {
      "data": Array [
        Object {
          "guestName": "10num",
          "id": 10,
          "myVal": 4200,
        },
        Object {
          "guestName": "11num",
          "id": 11,
          "myVal": 4620,
        },
        Object {
          "guestName": "12num",
          "id": 12,
          "myVal": 5040,
        },
        Object {
          "guestName": "13num",
          "id": 13,
          "myVal": 5460,
        },
        Object {
          "guestName": "14num",
          "id": 14,
          "myVal": 5880,
        },
        Object {
          "guestName": "15num",
          "id": 15,
          "myVal": 6300,
        },
        Object {
          "guestName": "16num",
          "id": 16,
          "myVal": 6720,
        },
        Object {
          "guestName": "17num",
          "id": 17,
          "myVal": 7140,
        },
        Object {
          "guestName": "18num",
          "id": 18,
          "myVal": 7560,
        },
        Object {
          "guestName": "19num",
          "id": 19,
          "myVal": 7980,
        },
      ],
      "limit": 10,
      "skip": 10,
      "total": 99,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 10,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
    },
  },
}
`;

exports[`DbStore Create Test: after third page get 1`] = `
ListStore {
  "currentPage": Object {
    "formModel": 2,
  },
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {},
  "lists": Object {
    "formModel": Object {
      "data": Array [
        Object {
          "guestName": "20num",
          "id": 20,
          "myVal": 8400,
        },
        Object {
          "guestName": "21num",
          "id": 21,
          "myVal": 8820,
        },
        Object {
          "guestName": "22num",
          "id": 22,
          "myVal": 9240,
        },
        Object {
          "guestName": "23num",
          "id": 23,
          "myVal": 9660,
        },
        Object {
          "guestName": "24num",
          "id": 24,
          "myVal": 10080,
        },
        Object {
          "guestName": "25num",
          "id": 25,
          "myVal": 10500,
        },
        Object {
          "guestName": "26num",
          "id": 26,
          "myVal": 10920,
        },
        Object {
          "guestName": "27num",
          "id": 27,
          "myVal": 11340,
        },
        Object {
          "guestName": "28num",
          "id": 28,
          "myVal": 11760,
        },
        Object {
          "guestName": "29num",
          "id": 29,
          "myVal": 12180,
        },
      ],
      "limit": 10,
      "skip": 20,
      "total": 99,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 10,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
    },
  },
}
`;

exports[`DbStore Create Test: before login 1`] = `
<div>
  {
  "currentPage": 0,
  "maxPage": 1,
  "showNextPage": false,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: empty result 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "1num",
        "myVal": 420,
        "id": 1
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals but not fetched yet 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "1num",
        "myVal": 420,
        "id": 1
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals with guaranteed fetch 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "1num",
        "myVal": 420,
        "id": 1
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: list after fetch 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "1num",
        "myVal": 420,
        "id": 1
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: list before fetch 1`] = `
<div>
  {
  "list": {
    "total": 0,
    "limit": 10,
    "skip": 0,
    "data": []
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 1,
  "showNextPage": false,
  "showPrevPage": false,
  "isDirty": true
}
</div>
`;

exports[`DbStore Create Test: list on fourth page 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 20,
    "data": [
      {
        "guestName": "20num",
        "myVal": 8400,
        "id": 20
      },
      {
        "guestName": "21num",
        "myVal": 8820,
        "id": 21
      },
      {
        "guestName": "22num",
        "myVal": 9240,
        "id": 22
      },
      {
        "guestName": "23num",
        "myVal": 9660,
        "id": 23
      },
      {
        "guestName": "24num",
        "myVal": 10080,
        "id": 24
      },
      {
        "guestName": "25num",
        "myVal": 10500,
        "id": 25
      },
      {
        "guestName": "26num",
        "myVal": 10920,
        "id": 26
      },
      {
        "guestName": "27num",
        "myVal": 11340,
        "id": 27
      },
      {
        "guestName": "28num",
        "myVal": 11760,
        "id": 28
      },
      {
        "guestName": "29num",
        "myVal": 12180,
        "id": 29
      }
    ]
  },
  "loading": false,
  "currentPage": 2,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": true,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: prefix after list get 1`] = `
ListStore {
  "currentPage": Object {
    "formModel": 2,
    "undefined": 0,
  },
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {
    "undefinedundefined{\\"$limit\\":10,\\"$skip\\":0}": Promise {
      "cancel": [Function],
    },
    "undefinedundefined{\\"$limit\\":10,\\"$skip\\":10}": Promise {
      "cancel": [Function],
    },
  },
  "lists": Object {
    "createpref.formModel": Object {
      "data": Array [
        Object {
          "guestName": "0num",
          "id": 0,
          "myVal": 0,
        },
        Object {
          "guestName": "1num",
          "id": 1,
          "myVal": 420,
        },
        Object {
          "guestName": "2num",
          "id": 2,
          "myVal": 840,
        },
        Object {
          "guestName": "3num",
          "id": 3,
          "myVal": 1260,
        },
        Object {
          "guestName": "4num",
          "id": 4,
          "myVal": 1680,
        },
        Object {
          "guestName": "5num",
          "id": 5,
          "myVal": 2100,
        },
        Object {
          "guestName": "6num",
          "id": 6,
          "myVal": 2520,
        },
        Object {
          "guestName": "7num",
          "id": 7,
          "myVal": 2940,
        },
        Object {
          "guestName": "8num",
          "id": 8,
          "myVal": 3360,
        },
        Object {
          "guestName": "9num",
          "id": 9,
          "myVal": 3780,
        },
      ],
      "limit": 10,
      "skip": 0,
      "total": 99,
    },
    "formModel": Object {
      "data": Array [
        Object {
          "guestName": "20num",
          "id": 20,
          "myVal": 8400,
        },
        Object {
          "guestName": "21num",
          "id": 21,
          "myVal": 8820,
        },
        Object {
          "guestName": "22num",
          "id": 22,
          "myVal": 9240,
        },
        Object {
          "guestName": "23num",
          "id": 23,
          "myVal": 9660,
        },
        Object {
          "guestName": "24num",
          "id": 24,
          "myVal": 10080,
        },
        Object {
          "guestName": "25num",
          "id": 25,
          "myVal": 10500,
        },
        Object {
          "guestName": "26num",
          "id": 26,
          "myVal": 10920,
        },
        Object {
          "guestName": "27num",
          "id": 27,
          "myVal": 11340,
        },
        Object {
          "guestName": "28num",
          "id": 28,
          "myVal": 11760,
        },
        Object {
          "guestName": "29num",
          "id": 29,
          "myVal": 12180,
        },
      ],
      "limit": 10,
      "skip": 20,
      "total": 99,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "createpref.formModel": 10,
    "formModel": 10,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "createpref.formModel": Object {
      "$limit": 10,
      "$skip": 0,
    },
    "formModel": Object {
      "$limit": 10,
      "$skip": 20,
    },
  },
}
`;

exports[`DbStore Create Test: prefix list after fetch 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "1num",
        "myVal": 420,
        "id": 1
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: prefix list before fetch 1`] = `
<div>
  {
  "currentPage": 0,
  "maxPage": 1,
  "showNextPage": false,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: prefix second page 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "1num",
        "myVal": 420,
        "id": 1
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "currentPage": 0,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query number 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "1num",
        "myVal": 420,
        "id": 1
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query set 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "1num",
        "myVal": 420,
        "id": 1
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: prefix third page 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "1num",
        "myVal": 420,
        "id": 1
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "currentPage": 0,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": false,
  "isDirty": false
}
</div>
`;

exports[`DbStore Create Test: using prevPage back to third page 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 20,
    "data": [
      {
        "guestName": "20num",
        "myVal": 8400,
        "id": 20
      },
      {
        "guestName": "21num",
        "myVal": 8820,
        "id": 21
      },
      {
        "guestName": "22num",
        "myVal": 9240,
        "id": 22
      },
      {
        "guestName": "23num",
        "myVal": 9660,
        "id": 23
      },
      {
        "guestName": "24num",
        "myVal": 10080,
        "id": 24
      },
      {
        "guestName": "25num",
        "myVal": 10500,
        "id": 25
      },
      {
        "guestName": "26num",
        "myVal": 10920,
        "id": 26
      },
      {
        "guestName": "27num",
        "myVal": 11340,
        "id": 27
      },
      {
        "guestName": "28num",
        "myVal": 11760,
        "id": 28
      },
      {
        "guestName": "29num",
        "myVal": 12180,
        "id": 29
      }
    ]
  },
  "loading": true,
  "currentPage": 2,
  "maxPage": 10,
  "showNextPage": true,
  "showPrevPage": true,
  "isDirty": false
}
</div>
`;
